alignment fix

--- a/src/styles/Experience.css
+++ b/src/styles/Experience.css
@@ -50,5 +50,5 @@
   line-height: 1.5;
   font-size: 1.2rem;
   max-width: 700px;
-  margin-left: 300px;
+  margin-left: 250px;
 }
